# port-killer

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
scripts/: create-portable-release.ps1
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_status.rs  lib.rs  main.rs  port_scanner.rs  process_killer.rs
src/components/: ActionBar.tsx  PortList.tsx  SearchBar.tsx
src/hooks/: usePorts.ts
src/types/: port.ts
